--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NotesApp</string>
+    <string name="tooltip_title">Title</string>
+    <string name="tooltip_body">Body</string>
+    <string name="add_note">Add note</string>
 </resources>
